methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:1: error: not found: value setColorBrush
setColorBrush(Color.red)
^MethodsDogHouse:23: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:29: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:39: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:49: error: not found: value dogHouse
		dogHouse();		
                ^