methods.basics.MethodsDogHouse.scala.code
setColorBrush(Color.red)
brushDown()

for(i <- 1 to 6) {
  forward()
}

for(i <- 1 to 5) {
  backward()
}

left()

for(i <- 1 to 6) {
  forward()
}
